# flashcard

./: Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: build_nix.yml
src/: app.rs  flashcard.rs  main.rs
tests/: example.csv
