[package]
name = "flashcard"
version = "0.1.0"
authors = ["Ayrton Chilibeck <git@blobfish.icu>"]
license = "MIT"
edition = "2021"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
color-eyre = "0.6.3"
ratatui-image = "4.2.0"
clap = { version = "4.5.27", features = ["derive"] }
csv = "1.3.1"
rand = "0.9.0"
